[metadata]
name = lto
version = 0.0.0
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent



[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    PyNaCl
    pyblake2>=1.1.0
    base58 >=0.2.0, <=0.2.5

[options.packages.find]
where = src
