[metadata]
name = lto
version = 0.0.11
author = Andrea
author_email = andrea@ltonetwork.com
description = LTO Network Python API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ltonetwork/lto-api.python
project_urls =
    Bug Tracker = https://github.com/ltonetwork/lto-api.python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent



[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.24.0, <=2.26.0
    PyNaCl
    pyblake2>=1.1.0
    base58 >=0.2.0, <=0.2.5
    ecdsa==0.17.0

[options.packages.find]
where = src
