[metadata]
name = lto
version = 0.0.0
author = LTO Network
author_email = info@ltonetwork.com
description = LTO Network Python API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ltonetwork/lto-api.python
project_urls =
    Bug Tracker = https://github.com/ltonetwork/lto-api.python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent



[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.24.0, <3
    PyNaCl
    base58~=0.2.5
    ecdsa~=0.17.0
    inflection~=0.5.1
    freezegun~=1.1.0
    mnemonic~=0.20
    eth-utils~=2.0.0
    pycryptodome~=3.12.0

[options.packages.find]
where = src
